Added API, serach engine

--- a/src/App.css
+++ b/src/App.css
@@ -1,19 +1,7 @@
-.App body {
-  background: #161853;
-  color: #faedf0;
-  /*background: url("../images/background3.jpg") no-repeat center center fixed;*/
-  background-size: cover;
-  font-size: 12px;
-  font-family: sans-serif;
-  text-align: center;
-}
-
 .App .background {
   position: absolute;
   opacity: 0.8;
   top: 0px;
-  width: 100%;
-  height: 100%;
   bottom: 0px;
 }
 
@@ -30,6 +18,8 @@
   position: relative;
   font-family: Poppins;
   top: 30px;
+  max-width: 80%;
+  color: #161853;
 }
 
 .App h1 {
@@ -39,274 +29,12 @@
   color: white;
 }
 
-.Search #search_form {
+footer {
   margin-top: 50px;
-  width: 60%;
-  position: relative;
-  margin: 0px 50px;
-  margin: 0 auto;
-}
-.Search #btn_search {
-  position: absolute;
-  border-radius: 6px;
-  line-height: 1.7;
-  border: none;
-  padding: 5px 15px 5px 15px;
-  color: #fcffe7;
-  background: #0002a1;
-  margin: 0px 10px;
-}
-
-.Search #search_city_name {
-  border-color: #0002a1;
-  border-radius: 6px;
-  border-width: 1px;
-  padding: 5px 15px 5px 15px;
-  font-size: 1rem;
-}
-
-.Search .dropdown_menu {
-  margin: 0px;
   text-align: center;
-}
-.Search .dropdown_content {
-  display: none;
-  position: relative;
-  text-align: center;
-  border-radius: 6px;
-  width: 85%;
-}
-
-.Search .dropdown_content a {
-  color: #161853;
-  padding: 5px 10px;
-  text-decoration: none;
-  display: block;
-  background-color: #daddfc;
-  border-radius: 6px;
-}
-
-.Search .dropdown_menu:hover .dropdown_content {
-  display: block;
-}
-
-.tab {
-  display: block; /*none*/
-  overflow: hidden;
-  border: 1px solid #faedf0;
-  background-color: #faedf0;
-  width: 60%;
-  position: relative;
-  border-radius: 4px;
-  margin: 0 auto;
-  margin-top: 30px;
-}
-
-.tab button {
-  background-color: inherit;
-  float: left;
-  border: none;
-  outline: none;
-  cursor: pointer;
-  font-size: 0.7rem;
-  text-align: center;
-  padding: 10px 20px;
-  transition: 0.3s;
   font-style: italic;
-  font-weight: bold;
-  color: #161853;
-}
-
-.tab button:hover {
-  background-color: #161853;
-  opacity: 0.7;
-  color: #fcffe7;
-}
-
-.tab .active {
-  background: #161853;
-}
-
-.tabcontent {
-  display: block; /*none*/
-  border-top: none;
-  border-bottom: none;
-  padding: 60px 0px 0px 20px;
-  color: #161853;
-}
-
-.CurrentContent #current_date,
-.CurrentContent #current_time {
-  position: relative;
-  font-size: 1rem;
-  text-align: left;
-  font-style: italic;
-  font-weight: bold;
-  display: flex;
-  align-items: center;
-  justify-content: flex-start;
-}
-
-#current_weather_temperature {
-  font-size: 2rem;
-  text-align: right;
-}
-#current_weather_description {
-  text-transform: capitalize;
-  font-size: 1rem;
-  font-style: italic;
-  font-weight: bold;
-  line-height: 0.6;
-  display: flex;
-  align-items: center;
-  padding: 0px 30px;
-}
-
-.currentIcon {
-  text-align: right;
-  padding: 0px 20px;
-}
-
-.description {
-  justify-content: end;
-}
-
-.current_temperature {
-  position: relative;
-}
-
-#btn_details {
-  margin: 30px 0px 0px -20px;
-  text-align: center;
-  background: #161853;
-  color: #faedf0;
-  border-radius: 4px;
-}
-
-#btn_details:hover {
-  cursor: pointer;
-  color: #161853;
-  background: #faedf0;
-}
-
-#btn_content {
-  display: block; /*none*/
-  text-align: left;
-  padding: 10px;
-  font-style: italic;
-  color: #161853;
-}
-
-#current_temperature_max,
-#current_temperature_min,
-#current_humidity,
-#current_wind {
-  font-weight: bold;
-  color: #292c6d;
-  text-align: center;
-}
-
-#forecast_3,
-#forecast_6 {
-  text-align: center;
-  font-size: 1.2rem;
-  color: #161853;
-  background-color: #faedf0;
-  margin-right: 5px;
-}
-
-#forecast_temperature {
-  font-size: 13px;
-}
-
-#forecast_temperature_min {
-  opacity: 0.7;
-}
-
-p {
-  position: fixed;
-  bottom: 0;
-  max-width: 300px;
-  text-align: center;
-  background: #292c6d;
-  font-style: italic;
-  right: 20px;
   color: #161853;
   opacity: 0.8;
   font-size: 12px;
   font-weight: bold;
-}
-
-@media (max-width: 600px) {
-  #tab_content {
-    width: 100%;
-    font-size: 0.85rem;
-  }
-
-  #current_weather_image {
-    width: 50%;
-  }
-  #current_date,
-  #current_time,
-  #current_weather_description {
-    font-size: 1rem;
-  }
-  #weather_forecast_icon {
-    width: 70%;
-  }
-
-  #forecast_day {
-    font-size: 0.85rem;
-  }
-  #forecast3days,
-  #defaultOpen,
-  #forecast6days {
-    font-size: 0.85rem;
-    padding: 5px;
-  }
-}
-
-@media (max-width: 1000px) {
-  #background_img {
-    width: 125% !important;
-    height: 125% !important;
-  }
-}
-
-@media (max-width: 300px) {
-  #tab_content {
-    width: 100%;
-    font-size: 0.6rem;
-  }
-
-  #current_weather_image {
-    width: 40%;
-  }
-  #current_date,
-  #current_time,
-  #current_weather_description {
-    font-size: 0.7rem;
-  }
-  #current_weather_temperature {
-    font-size: 1.3rem;
-  }
-  #weather_forecast_icon {
-    width: 70%;
-  }
-
-  #forecast_day {
-    font-size: 0.55rem;
-  }
-
-  #forecast3days,
-  #defaultOpen,
-  #forecast6days {
-    font-size: 0.55rem;
-    padding: 2px;
-  }
-
-  #forecast_temperature_max,
-  #forecast_temperature_min {
-    font-size: 0.55rem;
-  }
 }
